@@ -22,6 +22,7 @@
 * Background menu balls would sometimes vanish on the "Please do not distribute" screen
 * Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
 * Red helmet animation will no longer skip frames after the intro scrolling animation
+* In internal editor, improve mouse lag and fix bug where mouse cursor would sometimes leave visual artifacts when left-clicking in empty space
 * The 3 timers (best time, flag tag time, current time) are now properly centered on screen
 
 ## Removed Legacy Features
